[package]
name = "maud"
# When releasing a new version, please update html_root_url in src/lib.rs
version = "0.23.0"
authors = ["Chris Wong <lambda.fairy@gmail.com>"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/maud/"
homepage = "https://maud.lambda.xyz/"
repository = "https://github.com/lambda-fairy/maud"
description = "Compile-time HTML templates."
categories = ["template-engine"]
edition = "2021"

[features]
default = []

zephyr = ["maud_macros/zephyr", "dep:zephyr"]

[dependencies]
maud_macros = { version = "0.23.0", path = "../maud_macros" }
itoa = { version = "0.4.8", default-features = false, features = ["i128"] }
zephyr = { git = "https://github.com/annieversary/zephyr", rev = "8828250885124b9f33a5c4db8b03654da20caef8", features = ["inventory"], optional = true }

[dev-dependencies]
trybuild = { version = "1.0.33", features = ["diff"] }

[package.metadata.docs.rs]
all-features = true
